deployment/k8s/canary.yaml
# Deployment for the canary application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-app
  labels:
    app: canary-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-app
  template:
    metadata:
      labels:
        app: canary-app
    spec:
      containers:
      - name: canary-app
        image: francoriba/canary-app:latest 
        ports:
        - containerPort: 5001  # Port exposed by the application
---
apiVersion: v1
kind: Service
metadata:
  name: canary-app
  labels:
    app: canary-app
spec:
  ports:
  - port: 80
    targetPort: 5001  # Map the service port to the container port
    protocol: TCP
    name: http
  selector:
    app: canary-app
