deployment/k8s/production.yaml
# Deployment for the main application (the stable or production version)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stable-app
  labels:
    app: stable-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stable-app
  template:
    metadata:
      labels:
        app: stable-app
    spec:
      containers:
      - name: stable-app
        image: francoriba/stable-app:latest
        ports:
        - containerPort: 5000  # Port exposed by the application
---
# Service for the main application
apiVersion: v1
kind: Service
metadata:
  name: stable-app
  labels:
    app: stable-app
spec:
  ports:
  - port: 80
    targetPort: 5000  # Map the service port to the container port
    protocol: TCP
    name: http
  selector:
    app: stable-app
