deployment/k8s/ingress_canary.yaml
# Ingress para la aplicación canaria
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-app
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"  # Ajusta el peso según sea necesario
spec:
  ingressClassName: nginx
  rules:
  - host: minikube.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: canary-app
            port:
              number: 80
