deployment/k8s/ingress_prod.yaml
# Ingress para la aplicación principal
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable-app
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: minikube.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: stable-app
            port:
              number: 80
